--- a/TangentConstruction/css/TangentStyle.css
+++ b/TangentConstruction/css/TangentStyle.css
@@ -8,3 +8,9 @@ hr
 {
 	border-top: 5px double;
 }
+
+body
+{
+	font-family: Arial, Helvetica, sans-serif;
+	background-color: rgb(0, 165, 0, 0.5) !important;
+}
