--- a/TangentConstruction/css/TangentStyle.css
+++ b/TangentConstruction/css/TangentStyle.css
@@ -12,5 +12,5 @@ hr
 body
 {
 	font-family: Arial, Helvetica, sans-serif;
-	background-color: rgb(0, 165, 0, 0.5) !important;
+	background-color: rgb(169, 169, 169) !important;
 }
