--- a/TangentConstruction/css/TangentStyle.css
+++ b/TangentConstruction/css/TangentStyle.css
@@ -9,8 +9,14 @@ hr
 	border-top: 5px double;
 }
 
+a:visited
+{
+  color: Black;
+}
+
 body
 {
 	font-family: Arial, Helvetica, sans-serif;
-	background-color: rgb(169, 169, 169) !important;
+  /* beige-greay first attempt 169 */
+	background-color: rgb(120, 120, 120) !important;
 }
