--- a/TangentConstruction/css/TangentStyle.css
+++ b/TangentConstruction/css/TangentStyle.css
@@ -14,6 +14,11 @@ a:visited
   color: Black;
 }
 
+.carousel-caption h3{
+  color: White;
+  text-shadow: 0 1px 2px rgba(0,0,0,.6);
+}
+
 body
 {
 	font-family: Arial, Helvetica, sans-serif;
