--- a/TangentConstruction/css/TangentStyle.css
+++ b/TangentConstruction/css/TangentStyle.css
@@ -17,11 +17,25 @@ a:visited
 .carousel-caption h3{
   color: White;
   text-shadow: 0 1px 2px rgba(0,0,0,.6);
+
 }
+
+.pageContent {
+  overflow: auto;
+}
+
 
 body
 {
 	font-family: Arial, Helvetica, sans-serif;
   /* beige-greay first attempt 169 */
-	background-color: rgb(120, 120, 120) !important;
+	/* background-color: rgb(120, 120, 120) !important; */
+  	/* background-color: rgb(255, 0, 0) !important; */
+    background: linear-gradient(to right,
+      red 12%,
+      grey 12%,
+      grey 88%,
+      red 88%,
+      red 100%
+      );
 }
