--- a/TangentConstruction/css/TangentStyle.css
+++ b/TangentConstruction/css/TangentStyle.css
@@ -44,3 +44,28 @@ body
       red 100%
       );
 }
+
+.btn {
+  color: white;
+  background: #333;
+}
+
+.btn:hover {
+  color: blue !important;
+}
+
+.navbar {
+  background-color: #333;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+
+
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
