--- a/TangentConstruction/css/TangentStyle.css
+++ b/TangentConstruction/css/TangentStyle.css
@@ -37,37 +37,39 @@ body
 	/* background-color: rgb(120, 120, 120) !important; */
   	/* background-color: rgb(255, 0, 0) !important; */
     background: linear-gradient(to right,
-      red 12%,
+      rgb(130, 0, 0) 12%,
       grey 12%,
       grey 88%,
-      red 88%,
-      red 100%
+      rgb(130, 0, 0) 88%,
+      rgb(130, 0, 0) 100%
       );
 }
 
+            /* Dropdown button, hover button, list color, list hover */
 .btn {
   color: white;
   background: #333;
 }
 
 .btn:hover {
-  color: blue !important;
+  color: rgb(181, 0, 0) !important;
 }
 
 .dropdown-menu {
-  color: green !important;
   background-color: #344 !important;
 }
 
 .dropdown-menu a{
-  color: green !important;
+  color: white !important;
   background-color: #344 !important;
 }
 
-.btn.open.active {
-  color: blue !important;
+.dropdown-menu a:hover{
+  color: rgb(181, 0, 0) !important;
+  background-color: #344 !important;
 }
 
+              /* NavBar color, hover color, and background */
 .navbar {
   background-color: #333;
   font-family: Arial, Helvetica, sans-serif;
@@ -80,4 +82,8 @@ body
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+}
+
+.navbar a:hover {
+  color: rgb(181, 0, 0);
 }
